# learn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .vimrc  ARCHITECTURE_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_DEPENDENCIES.md  EDITOR_ALIGNMENT.md  FEATURES.md  INSTRUCTIONS.md  LICENSE  QUICK_REFERENCE.md  README.md  README.md.old  ROADMAP.md  SECURITY.md  START_HERE.md  VIM_CHEATSHEET.md  add_lesson_notes.sh  audit_lessons.py  audit_report.txt  fix_lessons.py  install.ps1  install.sh  learn  pyproject.toml  setup-dev.sh
.devcontainer/: devcontainer.json
.docs/: CLI_DOCUMENTATION_COMPLETE.md  CLI_DOCUMENTATION_SUMMARY.md  DYNAMIC_COMPILE_COMMANDS_2025-11-01.md  LESSON_POPULATION_COMPLETE.md  MARKDOWN_RENDERING.md  MODE_VIM_STATUS.md  NEOVIM_DECORATION_FIX.md  PROJECT_TRANSFORMATION_2025-11-01.md  QUICK_SUMMARY.md  REPOSITORY_CLEANUP_COMPLETE.md  SESSION_COMPLETION_SUMMARY.md  SETUP_DEV.md  SETUP_FILES_ADDED.md  SETUP_NVIM.md  SUGGESTIONS.md  VIM_CHEATSHEET.md  VIM_MODE_DOCUMENTATION_INDEX.md  VIM_MODE_IMPLEMENTATION_SUMMARY.md
.github/: pull_request_template.md
CLI/: ARCHITECTURE.md  CHANGELOG.md  ENHANCED_README.md  FEATURES.md  FILES_CREATED.md  IMPLEMENTATION.md  INDEX.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  VIM_ENHANCEMENTS.md  VIM_MODE_GUIDE.md  VIM_UPDATE_SUMMARY.txt  WELCOME.txt  __init__.py  categories.py  config.py  install.sh  languages.py  learn  learn_cli.py  legacy_shim.py  modern_cli.py  utils.py
MODE_VIM/: COMPLETE_SETUP.md  FAQ.md  INTEGRATION_GUIDE.md  LEARNING_ROADMAP.md  NAVIGATION_GUIDE.md  QUICK_START.md  README.md  README.md.old  WINDOWS_SETUP.md
MODE_VSCODE/: COMPLETE_SETUP.md  FAQ.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  (+1 more)
(+1737 files in other folders)
