[project]
name = "learn-cli"
version = "0.1.0"
description = "Interactive CLI for learning programming through hands-on lessons"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Learn Project Contributors"}
]
keywords = ["education", "learning", "programming", "cli", "c++", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/learn"
Documentation = "https://github.com/YOUR_ORG/learn#readme"
Repository = "https://github.com/YOUR_ORG/learn.git"
Issues = "https://github.com/YOUR_ORG/learn/issues"
Changelog = "https://github.com/YOUR_ORG/learn/blob/main/CHANGELOG.md"

[project.scripts]
learn = "CLI.learn_cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CLI"]

[tool.setuptools.package-data]
CLI = ["*.py", "*.sh", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
